--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,13 @@ fabric.properties
 # modules.xml
 # .idea/misc.xml
 # *.ipr
+.idea/
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
