--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,11 @@ fabric.properties
 # modules.xml
 # .idea/misc.xml
 # *.ipr
+
+### Code Server ###
+
+#npm degub log
+codeserver/npm-debug.log
+
+#node modules
+codeserver/node_modules
