--- a/codeserver/package.json
+++ b/codeserver/package.json
@@ -4,7 +4,8 @@
   "description": "code server that provides REST services for party live application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "node-debug index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,15 @@
   "homepage": "https://github.com/mschlechtinger/partylive#readme",
   "dependencies": {
     "body-parser": "^1.17.0",
-    "express": "^4.15.0"
+    "connect-mongo": "^1.3.2",
+    "express": "^4.15.0",
+    "express-session": "^1.15.1",
+    "mongoose": "^4.8.6",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.4"
   }
 }
