--- a/clientapp/app/src/main/AndroidManifest.xml
+++ b/clientapp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.d062589.partylive">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
