--- a/codeserver/package.json
+++ b/codeserver/package.json
@@ -22,6 +22,7 @@
     "connect-mongo": "^1.3.2",
     "express": "^4.15.0",
     "express-session": "^1.15.1",
+    "firebase-admin": "^4.1.4",
     "mongoose": "^4.8.6",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
