--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,19 @@ codeserver/node_modules
 #config
 codeserver/config.js
 
+### File Server ###
+
+#npm degub log
+fileserver/npm-debug.log
+
+#node modules
+fileserver/node_modules
+
+#config
+fileserver/config.js
+
+#files
+fileserver/files
 ### Client App ###
 
 .idea/
