--- a/clientapp/app/src/main/AndroidManifest.xml
+++ b/clientapp/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,18 +28,18 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".PartyCreatorActivity"
-            android:parentActivityName=".MainActivity" >
+        <activity android:name=".Activities.PartyCreatorActivity"
+            android:parentActivityName=".Activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".Activities.MainActivity" />
         </activity>
 
-        <activity android:name=".PartyConfiguratorActivity"
-            android:parentActivityName=".PartyCreatorActivity" >
+        <activity android:name=".Activities.PartyConfiguratorActivity"
+            android:parentActivityName=".Activities.PartyCreatorActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".PartyCreatorActivity" />
+                android:value=".Activities.PartyCreatorActivity" />
         </activity>
 
     </application>
