--- a/clientapp/app/src/main/AndroidManifest.xml
+++ b/clientapp/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +23,8 @@
 
         <activity
             android:name=".Activities.MainActivity"
-            android:label="@string/title_activity_main">
+            android:label="@string/title_activity_main"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,15 +32,21 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activities.PartyCreatorActivity"
-            android:parentActivityName=".Activities.MainActivity" >
+        <activity
+            android:name=".Activities.PartyCreatorActivity"
+            android:parentActivityName=".Activities.MainActivity"
+            android:screenOrientation="portrait"
+            android:label="PartyCreator">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.MainActivity" />
         </activity>
 
-        <activity android:name=".Activities.PartyConfiguratorActivity"
-            android:parentActivityName=".Activities.PartyCreatorActivity" >
+        <activity
+            android:name=".Activities.PartyConfiguratorActivity"
+            android:parentActivityName=".Activities.PartyCreatorActivity"
+            android:screenOrientation="portrait"
+            android:label="PartyCreator">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.PartyCreatorActivity" />
