--- a/fileserver/package.json
+++ b/fileserver/package.json
@@ -8,6 +8,7 @@
     "express": "^4.15.2",
     "express-fileupload": "^0.1.2",
     "node-rsa": "^0.4.2",
+    "urlsafe-base64": "^1.0.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {},
