--- a/codeserver/package.json
+++ b/codeserver/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "request": "^2.81.0",
+    "urlsafe-base64": "^1.0.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
