--- a/clientapp/app/build.gradle
+++ b/clientapp/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.2.0'
     compile 'com.android.support:appcompat-v7:25.2.0'
 
+    compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-messaging:10.2.0'
+
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:25.2.0'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
@@ -59,3 +62,4 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
