--- a/clientapp/app/src/main/AndroidManifest.xml
+++ b/clientapp/app/src/main/AndroidManifest.xml
@@ -8,6 +8,22 @@
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <service
+        android:name=""
+        android:exported="false">
+        <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+        </intent-filter>
+    </service>
+
+    <service
+        android:name=""
+        android:exported="false">
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
