--- a/clientapp/app/src/main/AndroidManifest.xml
+++ b/clientapp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <service
-        android:name=""
+        android:name="com.example.d062589.partylive.firebase.FirebaseIDService"
         android:exported="false">
         <intent-filter>
             <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
@@ -17,7 +17,7 @@
     </service>
 
     <service
-        android:name=""
+        android:name="com.example.d062589.partylive.firebase.MessagingService"
         android:exported="false">
         <intent-filter>
             <action android:name="com.google.firebase.MESSAGING_EVENT" />
